--- a/@mdi/web-component/index.html
+++ b/@mdi/web-component/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
   <title>Custom Elements</title>
   <style>
     body {
