Fix title and favicon.

--- a/@mdi/lwc/index.html
+++ b/@mdi/lwc/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>My LWC App</title>
+        <title>@mdi/lwc</title>
         <style>
             body {
                 font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
