--- a/@mdi/lwc/index.html
+++ b/@mdi/lwc/index.html
@@ -11,7 +11,7 @@
             }
         </style>
         <meta name="viewport" content="width=device-width,initial-scale=1" />
-        <link rel="shortcut icon" href="/resources/favicon.ico" />
+        <link rel="shortcut icon" href="/resources/favicon.png" />
     </head>
     <body>
         <div id="main"></div>
