--- a/tile/index.html
+++ b/tile/index.html
@@ -8,6 +8,11 @@
   <style>
     body {
       line-height: 0;
+      background: url('export/paper-dots.svg');
+      background-repeat: repeat;
+      background-position: 1rem 1rem;
+      padding: 1rem;
+      margin: 0;
     }
     div {
       display: flex;
