--- a/tile/index.html
+++ b/tile/index.html
@@ -14,23 +14,23 @@
       padding: 1rem;
       margin: 0;
     }
-    div {
+    div.tiles {
       display: flex;
     }
-    span {
+    div.tiles span {
       display: flex;
     }
-    span > img {
+    div.tiles span > img {
       left: 0;
     }
-    span > img + img {
+    div.tiles span > img + img {
       margin-left: -64px;
     }
-    img.tile:hover {
+    div.tiles img.tile:hover {
       outline: 1px;
       outline-color: blue;
     }
-    div > span:hover {
+    div.tiles > span:hover {
       border: 4px solid #FFF;
       margin: -4px;
       position: relative;
@@ -38,10 +38,21 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.6);
       border-radius: 4px;
     }
+    div.title {
+      color: #444;
+      font-size: 1.5rem;
+      position: absolute;
+      right: 1rem;
+      top: 2rem;
+      font-family: 'Segoe UI';
+    }
   </style>
 </head>
 <body>
-  <div>
+  <div class="title">
+    RPG Tileset
+  </div>
+  <div class="tiles">
     <span>
       <img src="export/wall-outer-left-1.svg" />
     </span>
@@ -65,7 +76,7 @@
       <img src="export/tile-lines-1.svg" />
     </span>
   </div>
-  <div>
+  <div class="tiles">
     <span>
       <img src="export/wall-outer-left-2.svg" />
     </span>
@@ -84,7 +95,7 @@
       <img src="export/tile-lines-1.svg" />
     </span>
   </div>
-  <div>
+  <div class="tiles">
     <span>
       <img src="export/wall-outer-left-2.svg" />
     </span>
@@ -104,7 +115,7 @@
       <img src="export/tile-lines-1.svg" />
     </span>
   </div>
-  <div>
+  <div class="tiles">
     <span>
       <img src="export/floor-wood.svg" />
       <img src="export/tile-lines-1.svg" />
@@ -125,7 +136,7 @@
       <img src="export/tile-lines-2.svg" />
     </span>
   </div>
-  <div>
+  <div class="tiles">
     <span>
       <img src="export/wall-outer-left-3.svg" />
     </span>
@@ -145,7 +156,7 @@
       <img src="export/tile-lines-2.svg" />
     </span>
   </div>
-  <div>
+  <div class="tiles">
     <span>
       <img src="export/tile-lines-1.svg" />
     </span>
