--- a/tile/index.html
+++ b/tile/index.html
@@ -14,23 +14,34 @@
       padding: 1rem;
       margin: 0;
     }
-    div.tiles {
+    body.drag {
+      cursor: grab;
+    }
+    body.dragging {
+      cursor: grabbing;
+    }
+    div.tiles div {
       display: flex;
     }
-    div.tiles span {
+    div.tiles button {
       display: flex;
+      border: 0;
+      padding: 0;
+      background: transparent;
+      outline: none;
+      cursor: inherit;
     }
-    div.tiles span > img {
+    div.tiles div button img {
       left: 0;
     }
-    div.tiles span > img + img {
+    div.tiles div button img + img {
       margin-left: -64px;
     }
-    div.tiles img.tile:hover {
+    div.tiles div img.tile:hover {
       outline: 1px;
       outline-color: blue;
     }
-    div.tiles > span:hover {
+    div.tiles div button:hover {
       border: 4px solid #FFF;
       margin: -4px;
       position: relative;
@@ -53,124 +64,199 @@
     RPG Tileset
   </div>
   <div class="tiles">
-    <span>
-      <img src="export/wall-outer-left-1.svg" />
-    </span>
-    <span>
-      <img src="export/floor-empty.svg" />
-      <img src="export/shadow-8.svg" />
-      <img src="export/tile-lines-1.svg" />
-      <img src="export/wall-inner-left-1.svg" />
-      <img src="export/tile-detail-3.svg" />
-    </span>
-    <span>
-      <img src="export/floor-empty.svg" />
-      <img src="export/tile-lines-1.svg" />
-    </span>
-    <span>
-      <img src="export/floor-empty.svg" />
-      <img src="export/tile-lines-1.svg" />
-    </span>
-    <span>
-      <img src="export/floor-empty.svg" />
-      <img src="export/tile-lines-1.svg" />
-    </span>
-  </div>
-  <div class="tiles">
-    <span>
-      <img src="export/wall-outer-left-2.svg" />
-    </span>
-    <span>
-      <img src="export/floor-empty.svg" />
-      <img src="export/shadow-8.svg" />
-      <img src="export/tile-lines-1.svg" />
-      <img src="export/wall-inner-left-1.svg" />
-    </span>
-    <span>
-      <img src="export/floor-empty.svg" />
-      <img src="export/tile-lines-1.svg" />
-    </span>
-    <span>
-      <img src="export/floor-empty.svg" />
-      <img src="export/tile-lines-1.svg" />
-    </span>
-  </div>
-  <div class="tiles">
-    <span>
-      <img src="export/wall-outer-left-2.svg" />
-    </span>
-    <span>
-      <img src="export/floor-empty.svg" />
-      <img src="export/shadow-8.svg" />
-      <img src="export/tile-lines-2.svg" />
-      <img src="export/tile-detail-1.svg" />
-      <img src="export/wall-inner-left-1.svg" />
-    </span>
-    <span>
-      <img src="export/floor-empty.svg" />
-      <img src="export/tile-lines-1.svg" />
-    </span>
-    <span>
-      <img src="export/floor-empty.svg" />
-      <img src="export/tile-lines-1.svg" />
-    </span>
-  </div>
-  <div class="tiles">
-    <span>
-      <img src="export/floor-wood.svg" />
-      <img src="export/tile-lines-1.svg" />
-      <img src="export/floor-planks.svg" />
-    </span>
-    <span>
-      <img src="export/floor-empty.svg" />
-      <img src="export/shadow-8-2.svg" />
-      <img src="export/tile-lines-2.svg" />
-      <img src="export/tile-detail-3.svg" />
-    </span>
-    <span>
-      <img src="export/floor-empty.svg" />
-      <img src="export/tile-lines-2.svg" />
-    </span>
-    <span>
-      <img src="export/floor-empty.svg" />
-      <img src="export/tile-lines-2.svg" />
-    </span>
-  </div>
-  <div class="tiles">
-    <span>
-      <img src="export/wall-outer-left-3.svg" />
-    </span>
-    <span>
-      <img src="export/floor-empty.svg" />
-      <img src="export/shadow-8-1.svg" />
-      <img src="export/wall-inner-left-3.svg" />
-      <img src="export/tile-lines-3.svg" />
-      <img src="export/tile-detail-2.svg" />
-    </span>
-    <span>
-      <img src="export/floor-empty.svg" />
-      <img src="export/tile-lines-2.svg" />
-    </span>
-    <span>
-      <img src="export/floor-empty.svg" />
-      <img src="export/tile-lines-2.svg" />
-    </span>
-  </div>
-  <div class="tiles">
-    <span>
-      <img src="export/tile-lines-1.svg" />
-    </span>
-    <span>
-      <img src="export/tile-lines-1.svg" />
-    </span>
-    <span>
-      <img src="export/tile-lines-1.svg" />
-    </span>
-    <span>
-      <img src="export/floor-wood.svg" />
-      <img src="export/tile-lines-2.svg" />
-      <img src="export/floor-planks.svg" />
-    </span>
+    <div>
+      <button>
+        <img src="export/blank.svg" />
+      </button>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+    </div>
+    <div>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+      <button>
+        <img src="export/wall-outer-left-1.svg" />
+      </button>
+      <button>
+        <img src="export/paper-tan.svg" />
+        <img src="export/shadow-8.svg" />
+        <img src="export/tile-lines-1.svg" />
+        <img src="export/wall-inner-left-1.svg" />
+        <img src="export/tile-detail-3.svg" />
+      </button>
+      <button>
+        <img src="export/paper-tan.svg" />
+        <img src="export/tile-lines-1.svg" />
+      </button>
+      <button>
+        <img src="export/paper-tan.svg" />
+        <img src="export/tile-lines-1.svg" />
+      </button>
+      <button>
+        <img src="export/paper-tan.svg" />
+        <img src="export/tile-lines-1.svg" />
+      </button>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+    </div>
+    <div>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+      <button>
+        <img src="export/wall-outer-left-2.svg" />
+      </button>
+      <button>
+        <img src="export/paper-tan.svg" />
+        <img src="export/shadow-8.svg" />
+        <img src="export/tile-lines-1.svg" />
+        <img src="export/wall-inner-left-1.svg" />
+      </button>
+      <button>
+        <img src="export/paper-tan.svg" />
+        <img src="export/tile-lines-1.svg" />
+      </button>
+      <button>
+        <img src="export/paper-tan.svg" />
+        <img src="export/tile-lines-1.svg" />
+      </button>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+    </div>
+    <div>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+      <button>
+        <img src="export/wall-outer-left-2.svg" />
+      </button>
+      <button>
+        <img src="export/paper-tan.svg" />
+        <img src="export/shadow-8.svg" />
+        <img src="export/tile-lines-2.svg" />
+        <img src="export/tile-detail-1.svg" />
+        <img src="export/wall-inner-left-1.svg" />
+      </button>
+      <button>
+        <img src="export/paper-tan.svg" />
+        <img src="export/tile-lines-1.svg" />
+      </button>
+      <button>
+        <img src="export/paper-tan.svg" />
+        <img src="export/tile-lines-1.svg" />
+      </button>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+    </div>
+    <div>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+      <button>
+        <img src="export/paper-gray.svg" />
+        <img src="export/tile-lines-1.svg" />
+        <img src="export/floor-brick.svg" />
+      </button>
+      <button>
+        <img src="export/paper-tan.svg" />
+        <img src="export/shadow-8-2.svg" />
+        <img src="export/tile-lines-2.svg" />
+        <img src="export/tile-detail-3.svg" />
+      </button>
+      <button>
+        <img src="export/paper-tan.svg" />
+        <img src="export/tile-lines-2.svg" />
+      </button>
+      <button>
+        <img src="export/paper-tan.svg" />
+        <img src="export/tile-lines-2.svg" />
+      </button>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+    </div>
+    <div>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+      <button>
+        <img src="export/wall-outer-left-3.svg" />
+      </button>
+      <button>
+        <img src="export/paper-tan.svg" />
+        <img src="export/shadow-8-1.svg" />
+        <img src="export/wall-inner-left-3.svg" />
+        <img src="export/tile-lines-3.svg" />
+        <img src="export/tile-detail-2.svg" />
+      </button>
+      <button>
+        <img src="export/paper-tan.svg" />
+        <img src="export/tile-lines-2.svg" />
+      </button>
+      <button>
+        <img src="export/paper-tan.svg" />
+        <img src="export/tile-lines-2.svg" />
+      </button>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+    </div>
+    <div>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+      <button>
+        <img src="export/tile-lines-1.svg" />
+      </button>
+      <button>
+        <img src="export/tile-lines-1.svg" />
+      </button>
+      <button>
+        <img src="export/tile-lines-1.svg" />
+      </button>
+      <button>
+        <img src="export/paper-gray.svg" />
+        <img src="export/tile-lines-2.svg" />
+        <img src="export/floor-brick.svg" />
+      </button>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+    </div>
+    <div>
+      <button>
+        <img src="export/blank.svg" />
+      </button>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+      <button>
+        <img src="export/plus.svg" />
+      </button>
+    </div>
   </div>
   <button id="remove" style="margin-top:1rem;">Removing Overlapping</button>
   <script>
@@ -180,6 +266,48 @@
       x.className = '';
     });
   };
+  // GET api/map - list all maps
+  // GET api/map/:mapId
+  // Map = { id: '', name: 'foo' }
+  // PUT api/map Map
+  // POST api/map - must have name
+  // POST api/tile - must have map, and at least up, down, left, or right defined
+  // DELETE  api/tile/:tileId
+  var tiles = [
+    {
+      // map, id, up, right, down, left
+      id: ['', '', null, null, null, null],
+      collision: 0,
+      layer: [
+        'paper-dots'
+      ]
+    }
+  ];
+  var isDragging = false;
+  document.addEventListener('keydown', (e) => {
+    if (!isDragging && e.which === 32) {
+      document.body.className = 'drag';
+      isDragging = true;
+      console.log('hnn');
+    }
+  });
+  document.addEventListener('keyup', (e) => {
+    if (isDragging && e.which === 32) {
+      document.body.className = '';
+      isDragging = false;
+    }
+  });
+  document.addEventListener('mousedown', (e) => {
+    if (isDragging) {
+      document.body.className = 'dragging';
+    }
+  });
+  document.addEventListener('mouseup', (e) => {
+    if (isDragging) {
+      document.body.className = 'drag';
+    }
+  });
+  // Sort top left
   </script>
 </body>
 </html>
