--- a/tile/index.html
+++ b/tile/index.html
@@ -51,17 +51,33 @@
     }
     div.title {
       color: #444;
-      font-size: 1.5rem;
-      position: absolute;
-      right: 1rem;
-      top: 2rem;
+      position: fixed;
+      right: 0;
+      bottom: 0;
       font-family: 'Segoe UI';
+      box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.4);
+      border-radius: 0.5rem 0 0 0;
+      padding: 1rem 1.25rem;
+      text-align: right;
+    }
+    div.title h1 {
+      font-weight: normal;
+      font-size: 1.5rem;
+      line-height: 1.5rem;
+      margin: 0 0 0.5rem 0;
+    }
+    div.title h2 {
+      font-weight: normal;
+      font-size: 1rem;
+      line-height: 1rem;
+      margin: 0;
     }
   </style>
 </head>
 <body>
   <div class="title">
-    RPG Tileset
+    <h1>Map Name</h1>
+    <h2>Author</h2>
   </div>
   <div class="tiles">
     <div>
