--- a/tile/index.html
+++ b/tile/index.html
@@ -12,15 +12,14 @@
     }
 
     body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
       line-height: 0;
       background: url('export/paper-dots.svg');
       background-repeat: repeat;
       margin: 0;
       width: 100%;
       height: 100%;
+      cursor: grab;
+      overflow: hidden;
     }
 
     body.drag {
@@ -28,9 +27,17 @@
       user-select: none;
     }
 
+    body.drag .map {
+      pointer-events: none;
+    }
+
     body.dragging {
       cursor: grabbing;
       user-select: none;
+    }
+
+    body.dragging .map {
+      pointer-events: none;
     }
 
     div.tiles div {
@@ -95,9 +102,10 @@
     }
 
     .map {
-      min-width: 4rem;
-      min-height: 4rem;
+      width: 4rem;
+      height: 4rem;
       position: relative;
+      cursor: default;
     }
 
     .map button.add {
@@ -387,11 +395,11 @@
       tiles: []
     }
     var isDragging = false;
+    var isMoving = false;
     document.addEventListener('keydown', (e) => {
       if (!isDragging && e.which === 32) {
         document.body.className = 'drag';
         isDragging = true;
-        console.log('hnn');
       }
     });
     document.addEventListener('keyup', (e) => {
@@ -400,18 +408,46 @@
         isDragging = false;
       }
     });
+    var mapEle = document.querySelector('.map');
+    var offset = {
+      x: Math.floor((window.innerWidth - 64) / 2) * -1,
+      y: Math.floor((window.innerHeight - 64) / 2) * -1
+    };
+    mapEle.style.left = `${offset.x * -1}px`;
+    mapEle.style.top = `${offset.y * -1}px`;
+    var lastPosition = {};
+    function drag(e) {
+      var deltaX = lastPosition.x - event.clientX,
+          deltaY = lastPosition.y - event.clientY;
+      mapEle.style.left = `${(offset.x + deltaX) * -1}px`;
+      mapEle.style.top = `${(offset.y + deltaY) * -1}px`;
+      updateGrid();
+    }
+
     document.addEventListener('mousedown', (e) => {
-      if (isDragging) {
+      if (isDragging || e.target === document.body) {
         document.body.className = 'dragging';
+        lastPosition.x = e.clientX;
+        lastPosition.y = e.clientY;
+        isMoving = true;
+        document.addEventListener('mousemove', drag);
       }
     });
     document.addEventListener('mouseup', (e) => {
       if (isDragging) {
         document.body.className = 'drag';
+      } else if (e.target === document.body) {
+        document.body.className = '';
+      }
+      if (isMoving) {
+        offset.x += lastPosition.x - event.clientX;
+        offset.y += lastPosition.y - event.clientY;
+        document.removeEventListener('mousemove', drag);
+        isMoving = false;
       }
     });
 
-    var mapEle = document.querySelector('.map');
+    
     function updateGrid() {
       var rect = mapEle.getBoundingClientRect();
       document.body.style.backgroundPositionX = `${rect.x % 64}px`;
@@ -485,6 +521,13 @@
       if (sides[3]) { sides[3].id[2] = null; }
     }
 
+    function canRemove (x, y) {
+      if (map.tiles.length > 1) {
+        return true;
+      }
+      return false;
+    }
+
     var add = [];
 
     var processAdd = function () {}
@@ -500,18 +543,19 @@
       button.className = 'tile';
       button.title = `Virtual Coordinate ${x}, ${y}`;
       button.addEventListener('mouseenter', function () {
-        console.log(x, y);
-        var removeButton = document.createElement('button');
-        removeButton.className = 'remove';
-        removeButton.addEventListener('click', function () {
-          removeTile(x, y);
-          redrawMap();
-        });
-        button.appendChild(removeButton);
-        button.addEventListener('mouseleave', function mouseleave () {
-          button.removeChild(removeButton);
-          button.removeEventListener('mouseleave', mouseleave);
-        });
+        if (canRemove(x, y)) {
+          var removeButton = document.createElement('button');
+          removeButton.className = 'remove';
+          removeButton.addEventListener('click', function () {
+            removeTile(x, y);
+            redrawMap();
+          });
+          button.appendChild(removeButton);
+          button.addEventListener('mouseleave', function mouseleave () {
+            button.removeChild(removeButton);
+            button.removeEventListener('mouseleave', mouseleave);
+          });
+        }
       });
       mapEle.appendChild(button);
       // Next Tile
