--- a/tile/index.html
+++ b/tile/index.html
@@ -149,7 +149,7 @@
       width: 4rem;
       height: 4rem;
       outline: none;
-      background: url('export/tile-lines-1.svg');
+      background: transparent;
       border: 0;
       cursor: inherit;
     }
@@ -163,6 +163,10 @@
       border-radius: 4px;
       width: 4.5rem;
       height: 4.5rem;
+    }
+
+    .map button.tile img + img{
+      margin-left: -4rem;
     }
 
     button.remove {
@@ -606,7 +610,6 @@
         }
         return null;
       }).filter(c => c !== null);
-      console.log(counts);
       return counts.every(c => c === map.tiles.length - 1);
     }
 
@@ -634,6 +637,7 @@
 
     function editTile (tile) {
       tile.layers.push('tile-detail-1');
+      redrawMap();
     }
 
     var add = [];
@@ -678,6 +682,11 @@
             button.removeEventListener('mouseleave', mouseleave);
           });
         }
+      });
+      tile.layers.forEach(layer => {
+        var img = document.createElement('img');
+        img.src = `export/${layer}.svg`;
+        button.appendChild(img);
       });
       mapEle.appendChild(button);
       // Next Tile
