--- a/tile/index.html
+++ b/tile/index.html
@@ -165,8 +165,83 @@
       height: 4.5rem;
     }
 
-    .map button.tile img + img{
+    .map button.tile.collision-1 {
+      border-top-color: rgba(255, 0, 0, 0.5);
+    }
+    .map button.tile.collision-2 {
+      border-right-color: rgba(255, 0, 0, 0.5);
+    }
+    .map button.tile.collision-3 {
+      border-top-color: rgba(255, 0, 0, 0.5);
+      border-right-color: rgba(255, 0, 0, 0.5);
+    }
+    .map button.tile.collision-4 {
+      border-bottom-color: rgba(255, 0, 0, 0.5);
+    }
+    .map button.tile.collision-5 {
+      border-top-color: rgba(255, 0, 0, 0.5);
+      border-bottom-color: rgba(255, 0, 0, 0.5);
+    }
+    .map button.tile.collision-6 {
+      border-right-color: rgba(255, 0, 0, 0.5);
+      border-bottom-color: rgba(255, 0, 0, 0.5);
+    }
+    .map button.tile.collision-7 {
+      border-top-color: rgba(255, 0, 0, 0.5);
+    }
+    .map button.tile.collision-8 {
+      border-left-color: rgba(255, 0, 0, 0.5);
+    }
+    .map button.tile.collision-9 {
+      border-top-color: rgba(255, 0, 0, 0.5);
+      border-left-color: rgba(255, 0, 0, 0.5);
+    }
+    .map button.tile.collision-10 {
+      border-left-color: rgba(255, 0, 0, 0.5);
+      border-right-color: rgba(255, 0, 0, 0.5);
+    }
+    .map button.tile.collision-11 {
+      border-top-color: rgba(255, 0, 0, 0.5);
+      border-right-color: rgba(255, 0, 0, 0.5);
+      border-left-color: rgba(255, 0, 0, 0.5);
+    }
+    .map button.tile.collision-12 {
+      border-bottom-color: rgba(255, 0, 0, 0.5);
+      border-left-color: rgba(255, 0, 0, 0.5);
+    }
+    .map button.tile.collision-13 {
+      border-top-color: rgba(255, 0, 0, 0.5);
+      border-bottom-color: rgba(255, 0, 0, 0.5);
+      border-left-color: rgba(255, 0, 0, 0.5);
+    }
+    .map button.tile.collision-14 {
+      border-right-color: rgba(255, 0, 0, 0.5);
+      border-bottom-color: rgba(255, 0, 0, 0.5);
+      border-left-color: rgba(255, 0, 0, 0.5);
+    }
+    .map button.tile.collision-15 {
+      border-color: rgba(255, 0, 0, 0.5);
+    }
+
+    .map button.tile img + img {
       margin-left: -4rem;
+    }
+
+    .map button.tile svg {
+      width: 4.5rem;
+      height: 4.5rem;
+      position: absolute;
+      left: 0;
+      top: 0;
+      margin: -0.25rem;
+    }
+
+    .map button.tile svg path {
+      fill: transparent;
+    }
+
+    .map button.tile svg path:hover {
+      fill: rgba(255, 0, 0, 0.5);
     }
 
     button.remove {
@@ -181,44 +256,9 @@
       border: 0;
       border-radius: 0.25rem 0.25rem 0 0;
     }
+
     button.remove:hover {
       background: rgba(255, 0, 0, 0.5);
-    }
-    button.collision {
-      position: absolute;
-      border: 0;
-      background: transparent;
-    }
-    button.collision:hover {
-      background: rgba(255, 0, 0, 0.5);
-    }
-    button.collision-top {
-      width: 4.5rem;
-      height: 1rem;
-      left: -0.25rem;
-      top: -0.25rem;
-      border-radius: 0.25rem 0.25rem 0 0;
-    }
-    button.collision-right {
-      width: 1rem;
-      height: 4.5rem;
-      left: 3.25rem;
-      top: -0.25rem;
-      border-radius: 0 0.25rem 0.25rem 0;
-    }
-    button.collision-bottom {
-      width: 4.5rem;
-      height: 1rem;
-      left: -0.25rem;
-      top: 3.25rem;
-      border-radius: 0 0 0.25rem 0.25rem;
-    }
-    button.collision-left {
-      width: 1rem;
-      height: 4.5rem;
-      left: -0.25rem;
-      top: -0.25rem;
-      border-radius: 0.25rem 0 0 0.25rem;
     }
   </style>
 </head>
@@ -232,6 +272,8 @@
     <h1>Legend</h1>
     <p><strong>Hold</strong> Space to Drag</p>
     <p><strong>Hold</strong> CTRL to Enable Delete Mode</p>
+    <p><strong>Hold</strong> SHIFT to Enable Collision Mode</p>
+    <p><strong>Right Click</strong> to insert blank tiles</p>
   </div>
   <div class="tiles" style="display: none;">
     <div>
@@ -640,9 +682,23 @@
       redrawMap();
     }
 
+    function getCollision (tile, index) {
+      var c = tile.collision;
+      var sides = [
+        c === 1 || c === 3 || c === 5 || c === 7 || c === 9 || c === 11 || c === 13 || c === 15,
+        c === 2 || c === 3 || c === 6 || c === 7 || c === 10 || c === 11 || c === 14 || c === 15,
+        c === 4 || c === 5 || c === 6 || c === 7 || c === 12 || c === 13 || c === 14 || c === 15,
+        c === 8 || c === 9 || c === 10 || c === 11 || c === 12 || c === 13 || c === 14 || c === 15
+      ];
+      sides[index] = !sides[index];
+      return (sides[0] * 1) + (sides[1] * 2) + (sides[2] * 4) + (sides[3] * 8);
+    }
+
     var add = [];
 
     var processAdd = function () {}
+
+    var svgNS = 'http://www.w3.org/2000/svg';
 
     var process = function (tiles, [x, y], tile) {
       var tile = tiles.splice(tiles.findIndex(t => t.id[0] === tile.id[0]), 1)[0];
@@ -651,7 +707,7 @@
       var button = document.createElement('button');
       button.style.left = `${x * 4}rem`;
       button.style.top = `${y * 4}rem`;
-      button.className = 'tile';
+      button.className = `tile collision-${tile.collision}`;
       button.addEventListener('click', function () {
         editTile(tile);
       });
@@ -664,24 +720,36 @@
             redrawMap();
           });
           button.appendChild(removeButton);
-          var collisionButtons = ['top', 'right', 'bottom', 'left'].map(collision => {
-            var collisionButton = document.createElement('button');
-            collisionButton.className = `collision collision-${collision}`;
-            collisionButton.addEventListener('click', function () {
-              var tile = getTile(x, y);
-              tile.collision = 1;
-            });
-            button.appendChild(collisionButton);
-            return collisionButton;
-          });
-          button.addEventListener('mouseleave', function mouseleave () {
-            collisionButtons.forEach(btn => {
-              button.removeChild(btn);
-            });
-            button.removeChild(removeButton);
-            button.removeEventListener('mouseleave', mouseleave);
-          });
         }
+        var svg = document.createElementNS(svgNS, 'svg');
+        svg.setAttribute('viewBox', '0 0 72 72');
+        var sides = [
+          'M33.17,33.17L1.17,1.17C1.95,0.39 3,0 4,0H68C69.1,0 70.1,0.45 70.83,1.17L38.83,33.17C37.27,34.73 34.73,34.73 33.17,33.17Z',
+          'M38.83,33.17L70.83,1.17C71.61,1.95 72,3 72,4V68C72,69.1 71.55,70.1 70.83,70.83L38.83,38.83C37.27,37.27 37.27,34.73 38.83,33.17Z',
+          'M38.83,38.83L70.83,70.83C70.05,71.61 69,72 68,72H4C2.9,72 1.9,71.55 1.17,70.83L33.17,38.83C34.73,37.27 37.27,37.27 38.83,38.83Z',
+          'M33.17,38.83L1.17,70.83C0.39,70.05 0,69 0,68V4C0,2.9 0.45,1.9 1.17,1.17L33.17,33.17C34.73,34.73 34.73,37.27 33.17,38.83Z'
+        ];
+        sides.map((side, index) => {
+          var path = document.createElementNS(svgNS, 'path');
+          path.setAttribute('fill', '#C40000');
+          path.setAttribute('fill-opacity', '0.5');
+          path.setAttribute('d', side);
+          path.addEventListener('click', function(e) {
+            console.log(tile.collision, getCollision(tile, index));
+            tile.collision = getCollision(tile, index);
+            redrawMap();
+            e.stopPropagation();
+          });
+          svg.appendChild(path);
+        });
+        button.appendChild(svg);
+        button.addEventListener('mouseleave', function mouseleave () {
+          button.removeChild(svg);
+          if (removeButton) {
+            button.removeChild(removeButton);
+          }
+          button.removeEventListener('mouseleave', mouseleave);
+        });
       });
       tile.layers.forEach(layer => {
         var img = document.createElement('img');
