Fix buggy hover.

--- a/tile/index.html
+++ b/tile/index.html
@@ -230,6 +230,7 @@
       height: 3rem;
       display: block;
       position: absolute;
+      pointer-events: none;
     }
 
     body.collision .map button.collision-1::before {
