--- a/tile/index.html
+++ b/tile/index.html
@@ -188,6 +188,8 @@
     }
     .map button.tile.collision-7 {
       border-top-color: rgba(255, 0, 0, 0.5);
+      border-right-color: rgba(255, 0, 0, 0.5);
+      border-bottom-color: rgba(255, 0, 0, 0.5);
     }
     .map button.tile.collision-8 {
       border-left-color: rgba(255, 0, 0, 0.5);
@@ -256,6 +258,8 @@
     }
     body.collision .map button.collision-7::before {
       border-top-color: rgba(255, 0, 0, 0.5);
+      border-right-color: rgba(255, 0, 0, 0.5);
+      border-bottom-color: rgba(255, 0, 0, 0.5);
     }
     body.collision .map button.collision-8::before {
       border-left-color: rgba(255, 0, 0, 0.5);
