--- a/map/index.html
+++ b/map/index.html
@@ -5,19 +5,17 @@
         <title>Tile Editor</title>
         <style>
             html {
-                height: 100%;
+                min-height: 100vh;
             }
             body {
                 font-family: Arial, Helvetica, sans-serif;
                 margin: 0;
-            }
-            #main {
-                min-height: 65px;
-                padding-top: 50px;
+                min-height: 100vh;
+                background: #F1F1F1;
             }
         </style>
         <meta name="viewport" content="width=device-width,initial-scale=1" />
-        <link rel="shortcut icon" href="/resources/favicon.ico" />
+        <link rel="shortcut icon" href="resources/favicon.ico" />
     </head>
     <body>
         <map-app></map-app>
