--- a/map/index.html
+++ b/map/index.html
@@ -19,5 +19,5 @@
     </head>
     <body>
         <map-app></map-app>
-    <script type="text/javascript" src="0.app.js"></script><script type="text/javascript" src="app.js"></script></body>
+    <script type="text/javascript" src="0.app.js"></script><script type="text/javascript" src="2.app.js"></script><script type="text/javascript" src="app.js"></script></body>
 </html>
