--- a/lwc-ui/index.html
+++ b/lwc-ui/index.html
@@ -5,11 +5,7 @@
         <title>Demo lwc-ui</title>
         <style>
             body {
-                font-family: Arial, Helvetica, sans-serif;
-            }
-            #main {
-                min-height: 65px;
-                padding-top: 50px;
+                font-family: 'Segoe UI', Arial, Helvetica, sans-serif;
             }
         </style>
         <meta name="viewport" content="width=device-width,initial-scale=1" />
