--- a/lwc-ui/index.html
+++ b/lwc-ui/index.html
@@ -6,6 +6,7 @@
         <style>
             body {
                 font-family: 'Segoe UI', Arial, Helvetica, sans-serif;
+                background-color: #F1F1F1;
             }
         </style>
         <meta name="viewport" content="width=device-width,initial-scale=1" />
