--- a/lwc-ui/index.html
+++ b/lwc-ui/index.html
@@ -9,6 +9,7 @@
       font-family: -apple-system, system-ui, BlinkMacSystemFont,
         "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
       background-color: #F1F1F1;
+      margin: 0;
     }
   </style>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
