--- a/journal-generator/index.html
+++ b/journal-generator/index.html
@@ -257,7 +257,7 @@
             }
 
             section h2 {
-                font-weight: normal;
+                font-weight: 600;
                 margin: 0.5rem 0;
                 font-size: 1.25rem;
             }
@@ -688,6 +688,8 @@
                 <li><strong>Detail (Cover Back)</strong> - Optional informational page. This is preferred when the inner pages use a different paper stock. If this is not the case then print the inner page on the back of the cover page.</li>
                 <li><strong>Inner</strong> - This paper stock can vary depending on the usage. 65lb is common. Too many pages can cause a notebook to be difficult to close or staple.</li>
             </ul>
+            <h2>Source Code</h2>
+            <p><a href="https://github.com/Templarian/journal-generator">https://github.com/Templarian/journal-generator</a></p>
         </div>
     </section>
     <div class="body">
