--- a/journal-generator/index.html
+++ b/journal-generator/index.html
@@ -632,6 +632,7 @@
                 <option value="covers/cover-st-louis.png">Cover - St. Louis</option>
                 <option value="details/details-basic.png">Detail - Basic</option>
                 <option value="inner/inner-dot.png">Inner - 1/4 Inch Dots</option>
+                <option value="inner/inner-grid.png">Inner - 1/4 Inch Grid</option>
                 <option value="inner/inner-line.png">Inner - 1/4 Inch Line Rule</option>
             </select>
         </div>
