--- a/journal-generator/index.html
+++ b/journal-generator/index.html
@@ -685,7 +685,7 @@
             <p>Use the page selection tool to correctly mark the pages then print them.</p>
             <h3>Page</h3>
             <ul>
-                <li><strong>Cover</strong> - Front page is the right side and left the back of the booklet. 110lb+ paper recommended.</li>
+                <li><strong>Cover</strong> - Front page is the right side and left the back of the booklet. 110lb+ (199gsm) Cardstock paper recommended.</li>
                 <li><strong>Detail (Cover Back)</strong> - Optional informational page. This is preferred when the inner pages use a different paper stock. If this is not the case then print the inner page on the back of the cover page.</li>
                 <li><strong>Inner</strong> - This paper stock can vary depending on the usage. 65lb is common. Too many pages can cause a notebook to be difficult to close or staple.</li>
             </ul>
