--- a/journal-generator/index.html
+++ b/journal-generator/index.html
@@ -631,9 +631,12 @@
                 <option value="covers/cover-chicago.png">Cover - Chicago</option>
                 <option value="covers/cover-st-louis.png">Cover - St. Louis</option>
                 <option value="details/details-basic.png">Detail - Basic</option>
-                <option value="inner/inner-dot.png">Inner - 1/4 Inch Dots</option>
-                <option value="inner/inner-grid.png">Inner - 1/4 Inch Grid</option>
-                <option value="inner/inner-line.png">Inner - 1/4 Inch Line Rule</option>
+                <option value="inner/inner-dot.png">Inner - 1/4" Dots</option>
+                <option value="inner/inner-grid.png">Inner - 1/4" Grid</option>
+                <option value="inner/inner-line.png">Inner - 1/4" Line Rule</option>
+                <option value="inner/inner-iso.png">Inner - 1/4" Isometric</option>
+                <option value="inner/inner-left-line-right-dot.png">Inner - 1/4" Line Rule | Dots</option>
+                <option value="inner/inner-left-dot-right-line.png">Inner - 1/4" Dots | Line Rule</option>
             </select>
         </div>
         <div id="customTemplate" class="custom">
