Add more covers

--- a/journal-generator/index.html
+++ b/journal-generator/index.html
@@ -630,6 +630,8 @@
                 <option value="custom">Custom</option>
                 <option value="covers/cover-chicago.png">Cover - Chicago</option>
                 <option value="covers/cover-st-louis.png">Cover - St. Louis</option>
+                <option value="covers/cover-seattle.png">Cover - Seattle</option>
+                <option value="covers/cover-new-york.png">Cover - New York</option>
                 <option value="details/details-basic.png">Detail - Basic</option>
                 <option value="inner/inner-dot.png">Inner - 1/4" Dots</option>
                 <option value="inner/inner-grid.png">Inner - 1/4" Grid</option>
