iso detail page

--- a/journal-generator/index.html
+++ b/journal-generator/index.html
@@ -632,7 +632,8 @@
                 <option value="covers/cover-st-louis.png">Cover - St. Louis</option>
                 <option value="covers/cover-seattle.png">Cover - Seattle</option>
                 <option value="covers/cover-new-york.png">Cover - New York</option>
-                <option value="details/details-basic.png">Detail - Basic</option>
+                <option value="details/details-basic-dot.png">Detail - Basic - Dots</option>
+                <option value="details/details-basic-iso.png">Detail - Basic - Isometric</option>
                 <option value="inner/inner-dot.png">Inner - 1/4" Dots</option>
                 <option value="inner/inner-grid.png">Inner - 1/4" Grid</option>
                 <option value="inner/inner-line.png">Inner - 1/4" Line Rule</option>
