--- a/journal-generator/index.html
+++ b/journal-generator/index.html
@@ -632,6 +632,7 @@
                 <option value="covers/cover-st-louis.png">Cover - St. Louis</option>
                 <option value="covers/cover-seattle.png">Cover - Seattle</option>
                 <option value="covers/cover-new-york.png">Cover - New York</option>
+                <option value="covers/cover-kansas.png">Cover - Kansas</option>
                 <option value="details/details-basic-dot.png">Detail - Basic - Dots</option>
                 <option value="details/details-basic-iso.png">Detail - Basic - Isometric</option>
                 <option value="inner/inner-dot.png">Inner - 1/4" Dots</option>
